--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "consign": "^0.1.6",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "got": "^9.2.2"
+    "got": "^9.2.2",
+    "request": "^2.88.0"
   }
 }
