--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "got": "^9.2.2",
-    "request": "^2.88.0"
+    "mysql2": "^1.6.1",
+    "request": "^2.88.0",
+    "sequelize": "^4.39.0"
   }
 }
